Closed Bug 43789 Opened 25 years ago Closed 25 years ago

Timers do not fire accurately

Categories

(Core :: XUL, defect, P2)

x86
Linux
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: pavlov, Assigned: pavlov)

References

Details

(Keywords: perf, platform-parity, regression, Whiteboard: [dogfood-][nsbeta2+])

Attachments

(1 file)

Due to the fix checked in for bug 34871, timers no longer fire accuratly. This is partially due to an PRUint32 overflow and partially due to us no longer resetting timers time-to-fire, so "NOW" is always greater than when the timer was supposed to fire, so it fires every time the timer queue gets processed (every 10ms). We also were not firing with ms accuracy, but instead rounded to the nearest second.
Severity: normal → blocker
Status: NEW → ASSIGNED
Keywords: dogfood
Priority: P3 → P2
Target Milestone: --- → M17
cc me
Blocks: 26502
Blocks: 12761
things that the user might notice: * the caret in text fields blinking 100 times/sec * pages with dhtml using timers are horifically slow. (see test13 or bug 12761)
Summary: Timers do not fire accuratly → Timers do not fire accurately
Keywords: pp
Adding myself to CC, adding regression and patch keywords.
Blocks: 43684
Keywords: patch, regression
No longer blocks: 43684
adding perf keyword (hi syd)
Keywords: perf
Blocks: 43684
Seems like a good bug to fix for beta, but not sure why it's dogfood, based on the symptoms described.
Whiteboard: [dogfood-][nsbeta2+]
checked in fix
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
verified fixed (2000070509 linux).
Status: RESOLVED → VERIFIED
Adding keyword to bugs which already show a nsbeta2 triage value in the status whiteboard so the queries don't get screwed up.
Keywords: nsbeta2
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: