fix for timers not firing accurately bug 43789.  r=blizzard, syd, bryner